# photoevolver

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requeriments.txt  setup.py  tree
examples/: future-evolution.ipynb  integrator-test.ipynb  planet-evolution-threaded.ipynb  planet-evolution.ipynb  planet-structure-uncertainties.ipynb  testing.ipynb
photoevolver/: K18interp.py  __init__.py  core.py  evo.py  evostate.py  integrator.py  massloss.py  models.py  owenwu17.py  photoevolver.py  physics.py  planet.py  plotter.py  settings.py  startable.py  structure.py  tracks.py  utils.py  version.py
photoevolver/EvapMass/: mass_loss.py  microphysics_params.py  planet_structure.py  solve_for_masses.py
photoevolver/K18grid/: interpolator.py
photoevolver/cmodels/src/: cmodels.c  mloss.c  models.h  struct.c
photoevolver/dev/: __init__.py  integrator.py  models.py  physics.py  planet.py  solve.py  startable.py  utils.py
photoevolver/legacy/: K18interp.py  __init__.py  core.py  owenwu17.py  plotter.py  utils.py
photoevolver/legacy/K18grid/: interpolator.py  k18test.py
photoevolver/libc/: libc.py  make.sh
photoevolver/libcfn/: __init__.py  libcfn.py
photoevolver/models/: __init__.py  core.py  envelope.py  misc.py  mloss.py  mloss_core_powered.py  star.py
photoevolver/old/: K18interp.py  __init__.py  tracks.py
tests/: backward.py  formulation_tests.py  forward.py  star.pickle  test_evostate.py  test_integrator.py  test_models.py  test_physics.py  test_planet.py  test_solve.py  test_startable.py  test_utils.py
(+19 files in other folders)
