[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "photoevolver"
version = "2.2"
authors = [
    {name = "Jorge Fernandez", email = "Jorge.Fernandez-Fernandez@warwick.ac.uk"},
]
description = "Simulates the evolution of planetary atmospheres under evaporation"
readme = "README.md"
requires-python = ">=3.10"
# keywords = ["one", "two"]
# license = {text = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL License",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy",
    "numpy",
    "scipy",
    "matplotlib",
    "uncertainties",
]
# dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/jorgefz/photoevolver"
